# radiant

./: .clang-format  .gitignore  CMakeLists.txt
include/: Utilities.h  garbage_dump.hpp  hittable.h  hittable_list.h  main.h  ray.h  sphere.h  vec3.h
include/common/: color.hpp  int_types.hpp  vec.hpp
include/core/: camera.hpp  color.hpp  constants.hpp  interval.h  linear_aggregate.hpp  material.hpp  math.hpp  matrix.hpp  primitive.hpp  ray.hpp  render_target.hpp  scene.hpp  sphere.hpp  surface_interaction.hpp  triangle_mesh.hpp  types.hpp  vec.hpp
include/core/acceleration_structures/: aggregate.hpp  bvh_aggregate.hpp  linear_aggregate.hpp
include/core/cache/: buffer_storage.hpp
include/core/probability/: distributions.hpp  sampling.hpp
include/core/shapes/: shape.hpp  sphere.hpp  triangle.hpp
include/garbage/: garbage_dump.hpp
include/importers/: gltf.hpp  obj.hpp
include/logging/: logging.hpp
src/: Sphere.cpp  garbage_dump.cpp  hittable_list.cpp  main.cpp
src/core/: camera.cpp  linear_aggregate.cpp  material.cpp  math.cpp  sphere.cpp
src/core/shapes/: triangle.cpp
src/garbage/: garbage_dump.cpp
src/importers/: obj.cpp
